--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <meta property="og:title" content="Time Left" />
+    <meta property="og:description" content="Time left till first mission" />
+    <meta property="og:image" content="https://i.ibb.co/QjyxJ2x/Screenshot-2021-09-25-205703.png" />
     <title>Time Left</title>
 </head>
 <body>
