--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 </div>
             </div>
         </div>
-        <div class="image-container d-flex align-items-center justify-content-center">
-            <img src="goal.svg" alt="">
+        <div class="image-container d-flex align-items-center justify-content-center col-md-6">
+            <img src="goal.svg" alt="" class="w-75">
         </div>
     </section>
     <script src="app.js"></script>
